Add the dumbest "chaos" causer that can work
Called the "muddle marmoset" as it is not very chaotic, and pretty
small. All it does is execute os:cmd. See the riakc_nhs.config for an
example of it stopping and starting a remote node.

If this were to be generally useful it would probably have more
commands, and a way to change config/restart workers so they didn't crash.

--- a/examples/riakc_nhs.config
+++ b/examples/riakc_nhs.config
@@ -42,3 +42,10 @@
 {pb_timeout_listkeys, 60000}.
 %% The general timeout will be used because this specific item is commented:
 %% {pb_timeout_mapreduce, 50000}.
+
+{muddle_marmoset, [{down, [{cmd, "ssh russell@192.168.118.134 '/home/russell/get-coord/riak/dev/dev1/bin/riak stop'"},
+                           {elapsed, 2}]},
+                   %% {down, [{cmd, "ssh spine_user@127.0.0.1 sudo /dbroot/riak/rel/bin/riak stop"}, {elapsed, 720}]}
+                   {up, [{cmd, "ssh russell@192.168.118.134 '/home/russell/get-coord/riak/dev/dev1/bin/riak start'"},
+                         {elapsed, 3}]}
+                  ]}.
